2004-06-17  Chad FOwler <chad@chadfowler.com>

	* lib/rubygems/installer.rb: Fixed bug in windows batch file generation
	which was causing file not found errors.

2004-06-17  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/doc_manager.rb (Gem::DocManager::generate_rdoc):
	Changed rdoc generation to do a chdir into the base source
	directory and then to use a relative path for all the source
	files.  This makes the generated RDOC html look better and may fix
	the windows drive/rdoc bug as a side effect.

2004-06-17  Rich Kilmer <rich@infoether.com>
        * Added ability to capture the UserInteraction with:
          c = Gem::UserInteraction.capture
          and then you can override specific methods like 'say':
          c.on_say {|statement| puts "you said: #{statement}"}

2004-06-15  Rich Kilmer <rich@infoether.com>
        * Added refactored command handling in rubygems/cmd_manager.rb and a 
          (temporary) bin/gem2 command file to test things out.  Once we feel
          comfortable, we can replace gem with gem2.

2004-06-10  Rich Kilmer <rich@infoether.com>
        * Isolated all user interaction to pass through module methods on a new
          Gem::UserInteraction module.  Those methods will be the method of abstracting
          the interaction of RubyGems for use in a GUI-based solution.

2004-06-10  Rich Kilmer <rich@infoether.com>
        * require 'rubygems' now minimally requires only the files needed
          for runtime access to gems...not management of gems.  To manage
          gems you now additionally need to execute Gem::manage_gems prior
          to using the builder/installer/etc.  This makes gemspecs not 
          backward compatible unless they add that line to the gemspec 
          after the require 'rubygems' line.

2004-06-10  Gavin Sinclair <gsinclair@soyabean.com.au>
	* bin/gem: --upgrade-all was broken, probably as a result of the
	  search changes listed below.

2004-06-09  Chad Fowler  <chad@chadfowler.com>