@@ -2,6 +2,8 @@
 
 	* lib/rubygems/installer.rb: Fixed bug in windows batch file generation
 	which was causing file not found errors.
+        * lib/rubygems/installer.rb: Uninstall now removes scripts and batch 
+        files that were install for application gems.
 
 2004-06-17  Jim Weirich  <jim@weirichhouse.org>
 
